<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/distance_24">

    <ImageView
        android:id="@+id/iv_logo_dicoding"
        android:layout_width="@dimen/distance_125"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_35"
        android:src="@drawable/logo_dicoding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_welcome_back"
        style="@style/text.bold"
        android:text="@string/welcome_back"
        android:textSize="@dimen/text_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo_dicoding" />

    <TextView
        android:id="@+id/textView4"
        style="@style/text"
        android:layout_marginTop="@dimen/distance_24"
        android:text="@string/please_log_in"
        android:textAlignment="center"
        android:textSize="@dimen/text_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_back" />

    <ImageView
        android:id="@+id/iv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/ic_email"
        app:layout_constraintBottom_toBottomOf="@+id/et_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_email_label"
        app:layout_constraintVertical_bias="0.30" />

    <TextView
        android:id="@+id/tv_email_label"
        style="@style/text.bold"
        android:layout_marginBottom="@dimen/distance_8"
        android:text="@string/email_address"
        android:textSize="@dimen/text_14"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintStart_toStartOf="@+id/et_email" />

    <com.nrahmatd.storyapp.utils.customview.EmailEditText
        android:id="@+id/et_email"
        style="@style/outline_box_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/distance_16"
        android:layout_marginEnd="@dimen/distance_16"
        android:background="@null"
        android:textCursorDrawable="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_email"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/v_line_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/distance_1"
        android:layout_marginTop="@dimen/distance_8"
        android:background="@color/grey_very_light"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <TextView
        android:id="@+id/tv_email_incorrect"
        style="@style/text"
        android:layout_marginTop="@dimen/distance_8"
        android:text="@string/the_email_you_entered_is_incorrect"
        android:textColor="@color/red"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v_line_email" />

    <ImageView
        android:id="@+id/iv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/ic_lock"
        app:layout_constraintBottom_toBottomOf="@+id/et_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_password_label"
        app:layout_constraintVertical_bias="0.30" />

    <TextView
        android:id="@+id/tv_password_label"
        style="@style/text.bold"
        android:layout_marginBottom="@dimen/distance_8"
        android:text="@string/password"
        android:textSize="@dimen/text_14"
        app:layout_constraintBottom_toTopOf="@+id/et_password"
        app:layout_constraintStart_toStartOf="@+id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/tv_email_incorrect"
        app:layout_constraintVertical_bias="1.0" />

    <com.nrahmatd.storyapp.utils.customview.PasswordEditText
        android:id="@+id/et_password"
        style="@style/outline_box_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/distance_16"
        android:layout_marginTop="@dimen/distance_16"
        android:layout_marginEnd="@dimen/distance_16"
        android:background="@null"
        android:textCursorDrawable="@null"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toStartOf="@id/iv_show_password"
        app:layout_constraintStart_toEndOf="@+id/iv_password"
        app:layout_constraintTop_toBottomOf="@+id/tv_email_incorrect"
        app:layout_constraintVertical_bias="0.12" />

    <ImageView
        android:id="@+id/iv_show_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/ic_show_password_inactive"
        app:layout_constraintBottom_toBottomOf="@+id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_password_label" />

    <View
        android:id="@+id/v_line_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/distance_1"
        android:layout_marginTop="@dimen/distance_8"
        android:background="#F0F0F0"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <TextView
        android:id="@+id/tv_password_incorrect"
        style="@style/text"
        android:layout_marginTop="@dimen/distance_8"
        android:text="@string/the_password_you_entered_is_incorrect"
        android:textColor="@color/red"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v_line_password" />

    <Button
        android:id="@+id/btn_login"
        style="@style/button.grey"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/distance_16"
        android:text="@string/login"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@id/tv_sign_up_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/spin_kit_loading"
        style="@style/SpinKitView.Small.ThreeBounce"
        android:layout_width="match_parent"
        android:layout_height="@dimen/distance_24"
        android:alpha="0.8"
        android:visibility="gone"
        app:SpinKit_Color="@color/color_primary"
        app:layout_constraintBottom_toTopOf="@id/tv_sign_up_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_login" />

    <TextView
        android:id="@+id/tv_sign_up_label"
        style="@style/text"
        android:text="@string/don_t_have_an_account"
        android:textAlignment="center"
        android:textSize="@dimen/text_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="@+id/btn_login" />

    <TextView
        android:id="@+id/tv_sign_up"
        style="@style/text"
        android:layout_marginStart="@dimen/distance_4"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="@dimen/text_14"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_sign_up_label"
        app:layout_constraintStart_toEndOf="@+id/tv_sign_up_label" />

</androidx.constraintlayout.widget.ConstraintLayout>